fix(api): Compatible with tkeel api
